# mmseqs2

./: .cirrus.yml  .gitattributes  .travis.yml  CMakeLists.txt  azure-pipelines.yml
.github/workflows/: Dockerfile.GPU-manylinux2014  debian.yml  userguide.yml  windows.yml
data/workflow/: databases.sh  easytaxonomy.sh  taxonomy.sh
lib/compat/: CMakeLists.txt  mman.cpp
lib/exprjit/: CMakeLists.txt
lib/exprjit/src/: exprjit.c  exprjit.h  jit_amd64.c  jit_amd64.dasc  jit_arm64.c  jit_arm64.dasc  tinyexpr-compat.h
lib/ryu/: CMakeLists.txt
lib/simd/: simd.h
lib/tinyexpr/: CMakeLists.txt
src/: CMakeLists.txt  CommandDeclarations.h  MMseqsBase.cpp  mmseqs.cpp
src/alignment/: Alignment.cpp  CMakeLists.txt  CompressedA3M.cpp  Fwbw.cpp  Matcher.cpp  Matcher.h  MsaFilter.cpp  MsaFilter.h  MultipleAlignment.cpp  MultipleAlignment.h  PSSMCalculator.cpp  PSSMCalculator.h  StripedSmithWaterman.cpp  StripedSmithWaterman.h  UngappedAligner.h  UngappedAlignerAVX512.cpp  UngappedAlignerDefault.cpp  UngappedAlignerInternal.cpp
src/commons/: Application.cpp  Concat.h  DBConcat.cpp  DBConcat.h  DBReader.cpp  DBReader.h  DBWriter.cpp  Debug.h  ExpressionParser.cpp  ExpressionParser.h  FileUtil.cpp  LambdaCalculation.cpp  LambdaCalculation.h  MemoryMapped.cpp  MemoryMapped.h  Parameters.cpp  Parameters.h  SequenceWeights.cpp  SequenceWeights.h  Util.cpp  Util.h
src/prefiltering/: Prefiltering.cpp  ungappedprefilter.cpp
src/taxonomy/: MappingReader.h  TaxonomyExpression.h
src/test/: TestLambdaCalculator.cpp  TestMultipleAlignment.cpp  TestTaxExpr.cpp  TestTinyExpr.cpp  TestUngappedCpuPerf.cpp
src/util/: CMakeLists.txt  apply.cpp  calculatelambda.cpp  clusthash.cpp  convertalignments.cpp  convertblastdb.cpp  expandaln.cpp  extractframes.cpp  extractorfs.cpp  filterdb.cpp  msa2profile.cpp  msa2result.cpp  nrtotaxmapping.cpp  orftocontig.cpp  renamedbkeys.cpp  result2msa.cpp  result2profile.cpp  splitsequence.cpp  transitivealign.cpp
src/workflow/: Search.cpp  TaxPerContig.cpp  Taxonomy.cpp
